--- a/nsu_codes_appli_conso.Rmd
+++ b/nsu_codes_appli_conso.Rmd
@@ -77,14 +77,16 @@ show_valid_codes <- function(
         glue::glue_data("{taille_nom}...{taille_val}") %>%
         glue::glue_collapse(sep = "<br>")
 
-    # ceux du groupe
+    # ceux du groupe, en enlevant ceux du produit
     group_txt <- df_produit %>%
         dplyr::slice(1L) %>%
         dplyr::pull(groupe)
 
     df_groupe <- dplyr::filter(df, groupe == group_txt)
 
-    unites_groupe_txt <- df_groupe %>%
+    df_sauf_produit <- anti_join(df_groupe, df_produit, by = c("produit" = "produit", "unite" = "unite"))
+
+    unites_groupe_txt <- df_sauf_produit %>%
         dplyr::distinct(unite) %>%
         dplyr::mutate(unite_nom = haven::as_factor(unite, levels = "labels")) %>%
         glue::glue_data("{unite_nom}...{unite}") %>%
