Introduire des couleurs pour les titres afin d'aider la lecture
Mettre un peu de CSS pour mieux distinguer les titres de groupe de produits et de produits, respectivement.

--- a/nsu_codes_appli_conso.Rmd
+++ b/nsu_codes_appli_conso.Rmd
@@ -21,6 +21,18 @@ knitr::opts_chunk$set(
 
 ```
 
+```{css}
+
+h1 {
+    color: red;
+}
+
+h2 {
+    color: blue;
+}
+
+```
+
 ```{r find_products_in_df}
 
 #' Faire resortir le code des produits dans du groupe dans la base
